--- a/readme
+++ b/readme
@@ -1,2 +1,6 @@
 Definition: As students are going through academics and pursuing their interested courses, often they find themselves confused. This system helps students to find career for them by assessing their area of interest.
 Demo Video: https://www.youtube.com/watch?v=n3gkSfwxIYI&t=26s
+
+Also with this project I and My Team secured 2nd runners up title in SmackAthon, a National Level Hackathon Organised as a part of Upsurge 2k22 by COSMOS.
+
+We have developed an ML-based "Career Recommendation System" with Python and Django framework. 
